--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
 
   <p>
     📧 <a href="mailto:phoenixphotographynashville@gmail.com">phoenixphotographynashville@gmail.com</a><br>
+    📞 Call or text: <a href="tel:+16292044033">(629) 204-4033</a><br>
     📸 <a href="https://www.instagram.com/phoenixphotosonline/" target="_blank">Instagram: @phoenixphotosonline</a><br>
     🔗 LinkedIn: <em>Coming Soon</em>
   </p>
